Bug 373319 - Plastik decoration hides buttons when a window is shaded
Summary: Plastik decoration hides buttons when a window is shaded
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: 5.8.2
Platform: Debian testing Linux
: LO normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D6719
Keywords:
: 374419 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-12-05 22:03 UTC by Alex
Modified: 2017-07-17 14:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.4
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments
Screenshot of a rolled up title bar (738 bytes, image/png)
2016-12-05 22:03 UTC, Alex
Details
Problem with patch+Aurorae (29.08 KB, image/png)
2017-07-15 18:53 UTC, Tsu Jan
Details
An Aurorae theme without border (28.74 KB, application/x-xz)
2017-07-15 19:06 UTC, Tsu Jan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2016-12-05 22:03:35 UTC
Created attachment 102634 [details]
Screenshot of a rolled up title bar

Steps to reproduce:
- Use Plastik as Window Decoration
- Roll up window (i.e. scroll with the mouse wheel on the title bar)
- Text and Buttons disappear
- You can see a tiny rest of the buttons at the top of the titlebar
Comment 1 Alex 2016-12-05 22:04:39 UTC
Doesn't happen with Breeze theme.
Comment 2 Alex 2016-12-05 22:36:23 UTC
Before you start wondering, the buttons are configured to be on the left.
Comment 3 Martin Flöser 2017-01-01 15:21:31 UTC
*** Bug 374419 has been marked as a duplicate of this bug. ***
Comment 4 Tsu Jan 2017-01-10 23:57:35 UTC
The same thing happens to Aurorae.
Comment 5 Tsu Jan 2017-07-15 15:20:19 UTC
This bug has been there for a long time. The problem is that Breeze's look is so elementary and it doesn't support translucency or fine-tuning, so many KWin users use Aurorae instead.
Comment 6 Martin Flöser 2017-07-15 16:03:45 UTC
The problem does neither happen when compositing is suspended nor when XRender compositing is used.
Comment 7 Alex 2017-07-15 16:05:36 UTC
I can reproduce with both xrender and compositing disabled.
Debian buster(testing) with kwin-x11 5.8.7-1
Comment 8 Alex 2017-07-15 16:06:02 UTC
(In reply to Alexander Schier from comment #7)
And plastik deco.
Comment 9 Martin Flöser 2017-07-15 16:07:52 UTC
(In reply to Martin Flöser from comment #6)
> The problem does neither happen when compositing is suspended nor when
> XRender compositing is used.

please ignore this comment, of course it happens also with XRender and no compositing.
Comment 10 Tsu Jan 2017-07-15 16:10:52 UTC
Happy to see there's an activity about this; just wanted to emphasize that the issue isn't specific to Plastik and, theoretically, any fix should solve the same problem in Aurorae too.
Comment 11 Martin Flöser 2017-07-15 17:03:48 UTC
Patch at https://phabricator.kde.org/D6719
Comment 12 Tsu Jan 2017-07-15 18:53:27 UTC
Created attachment 106652 [details]
Problem with patch+Aurorae

I'm afraid the patch doesn't work well with Aurorae (although it works with Plastik). First, it doesn't do anything when BorderBottom=0. Second, if BorderBottom is set to a positive value -- even 1 -- the patch "works" weirdly because the whole bottom shadow will be given to the shaded window, as the attached screenshot shows.
Comment 13 Martin Flöser 2017-07-15 18:55:12 UTC
Do you have me a theme with borderBottom=0 so that I can test?
Comment 14 Tsu Jan 2017-07-15 19:06:26 UTC
Created attachment 106653 [details]
An Aurorae theme without border

Attached is an Aurorae theme without (bottom) border but with large shadow. If I make a theme like it but with a bottom border of 1px, the shaded window will show a bottom border as thick as the shadow + 1px.
Comment 15 Martin Flöser 2017-07-15 19:46:21 UTC
Thanks, unfortunately I can confirm that this theme still doesn't work.
Comment 16 Tsu Jan 2017-07-15 19:53:44 UTC
> unfortunately I can confirm that this theme still doesn't work.

Actually, any theme, with or without bottom border because even if there's a bottom border, although the titlebar text and buttons will be shown correctly, the bottom shadow height will be added to the bottom border on shading -- which is a new bug with the patch in question. To test, use a theme with large shadows -- like the attached one -- and with a bottom border.
Comment 17 Martin Flöser 2017-07-16 14:01:36 UTC
I updated the patch, looks much better now.
Comment 18 Tsu Jan 2017-07-16 14:38:58 UTC
@Martin

This time the patch works like a charm :) Thank you!
Comment 19 Martin Flöser 2017-07-17 14:52:40 UTC
Git commit bf0e0f071cebf9238669ce4352f29cc3f061edcc by Martin Flöser.
Committed on 17/07/2017 at 14:51.
Pushed by graesslin into branch 'Plasma/5.10'.

[aurorae] Add support for shaded windows

Summary:
Aurorae did not render correctly. This change addresses the problem for
both maximized and restored windows.
FIXED-IN: 5.10.4

Test Plan: shaded windows with Plastik and SVG based theme

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D6719

M  +2    -0    plugins/kdecorations/aurorae/src/aurorae.cpp
M  +1    -1    plugins/kdecorations/aurorae/src/qml/Decoration.qml

https://commits.kde.org/kwin/bf0e0f071cebf9238669ce4352f29cc3f061edcc